ensure service existence

BUG:300599
FIXED-IN:4.9